# autofl-ui

./: README.md  pyproject.toml
docker/: Dockerfile
src/: Main.py
src/analysis/: file.py  package.py  project.py
src/pages/: 1_Project_Level.py  2_Package_Level.py  3_File_Level.py
src/request/: annotation.py  file_annotation.py
