[tool.poetry]
name = "autofl-ui"
version = "0.1.0"
description = ""
authors = ["Cezar Sas"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.24.0"
streamlit-extras = "^0.2.7"
plotly = "^5.15.0"
altair = "^5.0.1"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
