[tool.poetry]
name = "autofl-ui"
version = "0.1.0"
description = ""
authors = ["Cezar Sas"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.29.0"
streamlit-extras = "^0.3.5"
plotly = "^5.18.0"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
